@@ -1,51 +1,44 @@
 backends = \
-disks-conf \
-memory-conf \
-network-conf \
-shares-conf \
-time-conf \
-users-conf \
-boot-conf
+	disks-conf \
+	memory-conf \
+	network-conf \
+	shares-conf \
+	time-conf \
+	users-conf \
+	boot-conf \
+	print-conf
+
+PERLBODY = \
+	gettext.pl.in \
+	parse.pl.in \
+	replace.pl.in \
+	file.pl.in \
+	general.pl.in \
+	platform.pl.in \
+	report.pl.in \
+	xml.pl.in \
+	service.pl.in \
+	util.pl.in \
+	network.pl.in \
+	boot.pl.in \
+	debug.pl.in \
+	print.pl.in
 
 perl_libs = \
-gettext.pl \
-parse.pl \
-replace.pl \
-file.pl \
-general.pl \
-platform.pl \
-report.pl \
-xml.pl \
-service.pl \
-util.pl \
-network.pl \
-boot.pl \
-debug.pl
+	$(PERLBODY:.pl.in=.pl)
 
 scripts_SCRIPTS = $(backends) $(perl_libs) guess_system.sh
 
 EXTRA_DIST = \
-gettext.pl.in \
-parse.pl.in \
-replace.pl.in \
-file.pl.in \
-general.pl.in \
-platform.pl.in \
-report.pl.in \
-xml.pl.in \
-service.pl.in \
-util.pl.in \
-network.pl.in \
-boot.pl.in \
-debug.pl.in \
-disks-conf.in \
-memory-conf.in \
-network-conf.in \
-shares-conf.in \
-time-conf.in \
-users-conf.in \
-boot-conf.in \
-guess_system.sh
+	$(PERLBODY) \
+	disks-conf.in \
+	memory-conf.in \
+	network-conf.in \
+	shares-conf.in \
+	time-conf.in \
+	users-conf.in \
+	boot-conf.in \
+	guess_system.sh
 
 CLEANFILES = $(backends) $(perl_libs)
 
